
// ERD Diagram - Office ERP Integration

Table Clients {
  ClientID int [pk]
  ClientName varchar
  Address varchar
  Phone varchar
  Email varchar
}

Table Products {
  ProductID int [pk]
  ProductName varchar
  UnitPrice decimal
  Category varchar
  Quantity int
}

Table DocumentsOutMain {
  DocID int [pk]
  ClientID int [ref: > Clients.ClientID]
  DocNum varchar
  Date datetime
  TotalAmount decimal
}

Table DocumentsOutSub {
  LineID int [pk]
  DocID int [ref: > DocumentsOutMain.DocID]
  ProductID int [ref: > Products.ProductID]
  Quantity int
  Price decimal
}